CoreMC v1.0.0: full plugin + data-driven spawner variant progression
The complete CoreMC plugin, replacing the initial skeleton sources:

- Coin economy + chest-GUI shop (paged sections, buy/sell, /sell window)
- Islands: grid, schematics, protection, menu, upgrades, timed buffs,
  points + island top boards with season rewards via the Tebex bridge
- Vault economy bridge (provider) + giftcard commands backed by Tebex
- Rank ladder (config-driven tiers, join listener, admin tools)
- Spawner progression: 5 groups x 3 mobs, essences + unique drops,
  PDC spawner items, stacking with hologram labels, mob stacking,
  island luck (10% -> 50% unique-drop chance)
- Variant progression rework: upgrades cost essence + the mob's own
  unique drop only - no coins, no relics. Costs are pure YAML data
  (upgrade-defaults 10/3, 25/10, 75/30 with per-group and per-mob
  overrides: pig ancient 20/6, ender mythic 90/36), scale per spawner
  in a stack, and every tier is validated at load
- Tests: 186 unit tests green (SpawnerConfigTest upgrade-cost
  resolution/escalation, YamlSpawnerDataStore stacked-mythic
  round-trip) and a 152-check mineflayer journey green end to end
  (section 7b verifies luck scaling, layered costs, the pig override,
  2x-scaled stacks, auto-kill credits and mythic stack recovery)

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>